# pbanki

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  mount.sh  shell.nix
common/: Cargo.toml  build.rs
common/src/: api.rs  config.rs  lib.rs  sync.rs  utils.rs
dev/: Cargo.toml  build.rs
dev/src/: main.rs  utils.rs
frontend/: main.c
src/: api.rs  main.rs
ui/: constants.slint  deck.slint  learn.slint  main.slint  types.slint
ui/components/: card.slint  deck.slint  page_view.slint  rating_button.slint
ui/screens/: deck_select.slint  learn.slint
