[package]
name = "pbanki"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "./common", features = ["software-renderer"] }
anki = { path = "third_party/anki/rslib" }
slint = {version = "1.14.1", default-features = false, features = ["compat-1-2", "std", "software-renderer-systemfonts", "renderer-software"]}
inkview = "0.1.1"
inkview-slint = "0.1.1"
tokio = { version = "1", features = ["io-util"] }

[features]
default = []
sdk-6-8 = ["inkview/sdk-6-8"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
