[package]
name = "pbanki"
version = "0.1.0"
edition = "2024"

[dependencies]
euclid = "0.22.11"
rgb = "0.8.52"
common = { path = "./common" }
anki = { path = "third_party/anki/rslib" }
slint = {version = "1.14.1", default-features = false, features = ["compat-1-2", "std", "software-renderer-systemfonts", "renderer-software"]}
inkview = { git = "https://github.com/ananyatimalsina/inkview-rs", branch = "master" }
inkview-slint = { git = "https://github.com/ananyatimalsina/inkview-rs", branch = "master" }
tokio = { version = "1", features = ["io-util"] }

[features]
default = []
sdk-6-8 = ["inkview/sdk-6-8"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
