[package]
name = "pbanki"
version = "0.1.0"
edition = "2024"

[dependencies]
euclid = "0.22.11"
rgb = "0.8.52"
common = { path = "./common" }
slint = { git = "https://github.com/slint-ui/slint", rev = "44208ff", default-features = false, features = ["compat-1-2", "std", "software-renderer-systemfonts", "renderer-software"]}
inkview = { git = "https://github.com/ananyatimalsina/inkview-rs", branch = "1.15.0" }
inkview-slint = { git = "https://github.com/ananyatimalsina/inkview-rs", branch = "1.15.0" }
tokio = { version = "1", features = ["io-util"] }

[features]
default = []
sdk-6-8 = ["inkview/sdk-6-8"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug-assertions = false
incremental = false

[profile.release.package."*"]
opt-level = 3
overflow-checks = false
